<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:checked="true"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/about_us" />

    </group>

    <group
        android:id="@+id/extra"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_menu_star"
            android:title="@string/give_star" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share_app" />

        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_menu_more_apps"
            android:title="@string/more_apps" />
    </group>

    <group
        android:id="@+id/extra1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_menu_privacy"
            android:title="@string/policy_privacy" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_menu_terms"
            android:title="@string/terms_and_conditions" />
    </group>
</menu>