<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/parentLayout"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textColor="@color/black"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/regular"
            android:text="@string/nav_header_subtitle" />

    </LinearLayout>



    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:progressTint="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/developerss"
        android:layout_margin="20dp"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminate="true"/>

    <LinearLayout
        android:id="@+id/developerss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/developers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="10sp"
            android:text="G-DEVS"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black" />

    </LinearLayout>


</RelativeLayout>